# tezos-contract-metadata

./: .dockerignore  .gitignore  .gitlab-ci.yml  .ocamlformat  Dockerfile  LICENSE  README.md  dune-project  flextesa-cli.opam  tezai-base58-digest.opam  tezai-tz1-crypto.opam  tezos-base58-digest.opam  tezos-contract-metadata-cli.opam  tezos-contract-metadata-test.opam  tezos-contract-metadata.opam  tezos-contract-metadata.opam.template
.github/workflows/: main.yml
src/app/: dune
src/cli/: dune  main.ml  uri_validation.ml
src/doc/: mini-net.md
src/lib/: b58_hashes.ml  console.mli  contract_metadata.ml  contract_metadata.mli  dump_files.mli  dune  dune-project  hard_fork.mli  helpers.ml  http_client.ml  http_client.mli  import.ml  interactive_mini_network.ml  interactive_test.ml  interactive_test.mli  liquidity.ml  metadata_contents.ml  metadata_contents.mli  metadata_uri.ml  metadata_uri.mli  micheline_helpers.ml  micheline_helpers.mli  michelson.ml  michelson.mli  michelson_bytes.ml  network.ml  query_node.ml  query_nodes.ml  query_nodes.mli  test_command_line.mli  tezos-contract-metadata.opam  tezos_admin_client.mli  tezos_client.mli  tezos_daemon.ml  tezos_executable.ml  tezos_executable.mli
src/lib_base58_digest/: crypto_hash.mli  raw.mli  vbmithr_base58.ml
src/lib_tezos_base58_digest/: crypto_hash.ml  crypto_hash.mli  dune  identifier.ml  identifier.mli  prefix.ml  raw.ml  raw.mli
src/scripts/: build-doc.sh  full-sandbox-tests.sh  get-octez-static-binaries.sh  tutorial-box.sh
src/test/: contract_metadata_test.ml  dune  metadata_contents_test.ml
