opam-version: "2.0"
maintainer: "seb@mondet.org"
authors: [ "Tezos devteam" ]
homepage: "https://github.com/oxheadalpha/tezos-contract-metadata/"
bug-reports: "https://github.com/oxheadalpha/tezos-contract-metadata/issues"
dev-repo: "git+https://github.com/oxheadalpha/tezos-contract-metadata.git"
license: "MIT"
depends: [
  "base"
  "base58"
  "digestif" { = "0.9.0" }
  "lwt"
  "tls"
  "ppx_inline_test"
  "ppx_expect"
  "cohttp-lwt-unix"
  "tezos-tooling" { with-test }
  "dune" { >= "1.11" }
  "tezos-micheline"
  "cohttp"
  "fmt"
]
pin-depends: [
  [ "base58.version" "git+https://github.com/vbmithr/ocaml-base58.git#b7d41eb3bca54fe5c392a2b2110659a13fb4b871" ]
]  
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Implementation of TZIP-16: core types and converters"
